# ego4d

./: .gitignore  README.md  pyproject.toml
face-detection/: border_face.py
