[tool.poetry]
name = "ego4dworks"
version = "0.1.0"
description = ""
authors = ["tonmoy <tonmoyhalder50@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
insightface = "^0.7.3"
onnxruntime = "^1.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
